# olapy-web

./: .agignore  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  __main__.py  app.py  circle.yml  dev-requirements.txt  manage.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml
app/: app.py  extensions.py  models.py  test.py  views.py
app/api/: views.py
app/dashboard_api/: views.py
app/tools/: config_file_parser.py  cube_constructor.py  models.py
docs/: Makefile  README.md  api.rst  conf.py  index.rst  installation.rst  make.bat  quick_start.rst  web_config_file.rst
front/: .eslintrc.js  Makefile  index.html  package-lock.json  package.json  vue.config.js  webpack.config.js
front/public/: 404.html  500.html  base.html  index.html  login.html
front/src/: App.vue  main.js  router.js
front/src/cubes/: add-cube.vue  base-add-cube.vue  base-schema-options.vue  connect-db.vue  cube-details.vue  cube-dimensions.vue  cube-facts.vue  cubes-names.vue  schema-options.vue  schema-props.vue  the-cube-details.vue  the-cube-dimensions.vue  the-cube-facts.vue  the-cubes-names.vue  the-schema-props.vue  upload-files.vue
front/src/reporting/: BaseReport.vue  chartProps.vue  dashboardMaker.vue  queryBuilder.vue  reporting.vue  selectCubeDashboard.vue  userDashboards.vue  userPivotTables.vue
front/static/: build.js
front/static/css/: animate.css  bootstrap.min.css  designer.css  pivot.css  sb-admin-2.css  style.css
front/static/js/: jquery.slimscroll.js  sidebarmenu.js
front/static/js2/: custom.min.js
front/templates/: 404.html  500.html  base.html  chart-chartist.html  chart-chartjs.html  chart-morris.html  dashboard.html  email-compose.html  email-inbox.html  form-editor.html  form-layout.html  form-validation.html  form_macro.html  layout-blank.html  layout-boxed.html  layout-fix-header.html  login.html  map-google.html  map-vector.html  page-error-400.html  page-error-403.html  page-error-404.html  page-error-500.html  page-error-503.html  page-login.html  page-register.html  query_builder.html  reporting.html  schema_designer.html  table-bootstrap.html  uc-datamap.html  uc-nestedable.html  uc-sweetalert.html  uc-toastr.html  ui-alert.html  ui-button.html  ui-progressbar.html  ui-tab.html
front/templates/snippets/: cube_detail.html
front/tests/e2e/: test_available_databases.js  test_login.spec.js
front/tests/unit/: test_available_dbms.spec.js
migrations/versions/: 62cdd3c69f4d_.py  a083bde3649c_.py  faaf81e0fbcb_.py
olapy_web/: app.py  cli.py  extensions.py  forms.py  manage.py  models.py  pivottable.py  stats_utils.py  test.py  views.py
olapy_web/api/: __init__.py  cubes.py  dashboards.py  pivottables.py  util.py  views.py
olapy_web/static/css/: designer.css
olapy_web/templates/: base.html  dashboard.html  pivottablejs.html  query_builder.html  schema_designer.html
olapy_web/tools/: config_file_parser.py  cube_constructor.py  models.py
olapy_web/web/: stats_utils.py  views.py
olapy_web/web/templates/: pivottablejs.html
src/: app.py  cli.py  forms.py  manage.py  models.py  views.py
src/front/: .babelrc  .eslintrc.js  package.json  webpack.config.js
src/front/src/: main.js
src/front/static/: build.js
src/front/templates/: app-profile.html  base.html  chart-amchart.html  chart-echart.html  chart-flot.html  chart-peity.html  chart-sparkline.html  email-read.html  form-basic.html  form-dropzone.html  layout-fix-sidebar.html  page-invoice.html  query_builder.html  schema_designer.html  table-datatable.html  uc-calender.html  (+4 more)
tests/: conftest.py  db_creation_utils.py  utils.py
tests/functional/: test_api.py  test_api2.py  test_cubes.py  test_users.py
tests/unit/: test_api.py  test_cubes.py  test_users.py
web/: __init__.py  forms.py  models.py  olapy.db  pivottable.py  stats_utils.py  views.py
web/templates/: base.html  dash.html  dashboard.html  login.html  pivottablejs.html  query_builder.html
(+120 files in other folders)
