[tool.poetry]
name = "olapy_web"
version = "0.1.0"
authors = ["Abilian SAS <contact@abilian.com>"]
description = "Front-end to OLAP Engine"
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 2.7",
]
homepage = "https://github.com/abilian/olapy-web"
readme = "README.rst"


[build-system]
requires = ["poetry >= 1"]
build-backend = "poetry.masonry.api"


[tool.poetry.dependencies]
python = ">=3.6"

olapy = ">=0.6"

flask = ">=1"
flask-login = "*"
flask-migrate = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
pathlib = "*"
psycopg2-binary = "*"
pyyaml = ">=5"
sqlalchemy = "*"
typing = "*"
wtforms = "*"


[tool.poetry.dev-dependencies]
# Linting
flake8 = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
mastool = "*"
mccabe = "*"
pylint = "*"
flake8-bugbear = "*"
flake8-tidy-imports = "*"
flake8-comprehensions = "*"
mypy = "*"
black = { version = "*", allow-prereleases = true }

# Testing
pytest="*"
pytest-cov="*"
tox="*"

# Doc
sphinx = "*"
sphinx_rtd_theme="*"

# Formatting
isort="*"

# Other
PrettyTable="*"
gprof2dot="*"
py-cpuinfo="*"
