[tool.poetry]
name = "olapy_web"
version = "0.1.0"
authors = ["Abilian SAS <contact@abilian.com>"]
description = "Front-end to OLAP Engine (demo)"
classifiers = [
  "Programming Language :: Python",
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
]
homepage = "https://github.com/abilian/olapy-web"
readme = "README.rst"


[tool.poetry.dependencies]
python = ">3.8,<4"

olapy = ">=0.6"
numpy = "^1.22"

flask = ">=1"
flask-login = "*"
flask-migrate = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
wtforms = "*"

sqlalchemy = "*"
psycopg2-binary = "*"
pyyaml = ">=5"


[tool.poetry.dev-dependencies]
# Linting
flake8 = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-bugbear = "*"
flake8-tidy-imports = "*"
flake8-comprehensions = "*"
# mastool = "*"
mccabe = "*"
mypy = "*"
black = "*"

# Removed since it needs isort < 5.
# pylint = "*"

# Testing
pytest="*"
pytest-cov="*"

# Doc
sphinx = "*"
sphinx_rtd_theme="*"

# Formatting
isort=">5"

# Other
PrettyTable="*"
gprof2dot="*"
py-cpuinfo="*"


[build-system]
requires = ["poetry >= 1"]
build-backend = "poetry.masonry.api"
